# toolbox

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
toolbox/: __main__.py  base.py  toolbox.py
toolbox/builtin/: sample.py
toolbox/web/: __init__.py
toolbox/web/templates/: 404.html  base.html  index.html  tool.html
